<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xxx.mathequizdorama.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/opening_background"
            android:id="@+id/blackboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/blackboard01" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/thirty_two_dp"
                android:padding="@dimen/thirty_two_dp"
                android:text="@string/app_name_opening"
                android:textAllCaps="true"
                android:textColor="#f652a0"
                android:textSize="@dimen/thirty_two_sp_text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:padding="@dimen/sixty_dp"
                android:text="@string/touch_the_board"
                android:textColor="#bcece0"
                android:textSize="@dimen/twenty_sp_text" />


        </LinearLayout>

    </RelativeLayout>

</ScrollView>
