<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/blackboard_game_02"
    tools:context="com.example.xxx.mathequizdorama.FifthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--- Question 3-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:fontFamily="serif"
            android:padding="@dimen/thirty_two_dp"
            android:text="@string/question_3"
            android:textColor="#bcece0"
            android:textSize="@dimen/twenty_sp_text" />

        <EditText
            android:id="@+id/answerThree_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:fontFamily="serif"
            android:hint="@string/answer_question_3"
            android:inputType="textPersonName"
            android:textColor="#bcece0"
            android:paddingStart="@dimen/sixteen_dp"
            android:textColorHint="#bcece0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/forty_dp"
            android:background="#36eee0"
            android:fontFamily="serif"
            android:onClick="submitThree"
            android:text="@string/submit" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/two_dp"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:background="#f652a0" />

        <TextView
            android:id="@+id/summary_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text=""
            android:textColor="#bcece0"
            android:textSize="@dimen/twenty_sp_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/two_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:background="#f652a0" />



        <TextView
            android:id="@+id/next_question_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:padding="@dimen/forty_dp"
            android:textAllCaps="true"
            android:text="@string/next_question"
            android:textColor="#bcece0"
            android:textSize="@dimen/twenty_sp_text" />

    </LinearLayout>

</ScrollView>
