<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackboard_game_02"
    tools:context="com.example.xxx.mathequizdorama.EleventhActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--- Question 7-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:fontFamily="serif"
            android:padding="@dimen/thirty_two_dp"
            android:text="@string/question_7"
            android:textColor="#bcece0"
            android:textSize="@dimen/twenty_sp_text" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answerSevenOne_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#bcece0"
                android:layout_marginEnd="@dimen/twenty_four_dp"
                android:layout_marginStart="@dimen/twenty_four_dp"
                android:fontFamily="serif"
                android:paddingEnd="@dimen/twenty_four_dp"
                android:paddingStart="@dimen/twenty_four_dp"
                android:text="360" />

            <RadioButton
                android:id="@+id/answerSevenTwo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#bcece0"
                android:layout_marginEnd="@dimen/twenty_four_dp"
                android:layout_marginStart="@dimen/twenty_four_dp"
                android:fontFamily="serif"
                android:paddingEnd="@dimen/twenty_four_dp"
                android:paddingStart="@dimen/twenty_four_dp"
                android:text="180" />


            <RadioButton
                android:id="@+id/answerSevenThree_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#bcece0"
                android:layout_marginEnd="@dimen/twenty_four_dp"
                android:layout_marginStart="@dimen/twenty_four_dp"
                android:fontFamily="serif"
                android:paddingEnd="@dimen/twenty_four_dp"
                android:paddingStart="@dimen/twenty_four_dp"
                android:text="90" />


            <RadioButton
                android:id="@+id/answerSevenFour_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#bcece0"
                android:layout_marginEnd="@dimen/twenty_four_dp"
                android:layout_marginStart="@dimen/twenty_four_dp"
                android:fontFamily="serif"
                android:paddingEnd="@dimen/twenty_four_dp"
                android:paddingStart="@dimen/twenty_four_dp"
                android:text="1080" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/forty_dp"
            android:background="#36eee0"
            android:fontFamily="serif"
            android:onClick="submitSeven"
            android:text="@string/submit" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/two_dp"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:background="#f652a0" />

        <TextView
            android:id="@+id/summary_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text=""
            android:textColor="#bcece0"
            android:textSize="@dimen/twenty_sp_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/two_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:background="#f652a0" />

        <TextView
            android:id="@+id/next_question_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:padding="@dimen/forty_dp"
            android:textAllCaps="true"
            android:text="@string/next_question"
            android:textColor="#bcece0"
            android:textSize="@dimen/twenty_sp_text" />

    </LinearLayout>


</ScrollView>
